--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,3 +33,4 @@ LazyData: true
 RoxygenNote: 7.1.0
 URL: https://github.com/iSEE/iSEEWorkshop2020, https://iSEE.github.io/iSEEWorkshop2020
 BugReports: https://github.com/iSEE/iSEEWorkshop2020/issues
+DockerImage: iseedevelopers/iseeworkshop2020:latest
