--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,1 +1,15 @@
-destination: docs
+url: https://iSEE.github.io/iSEEWorkshop2020
+
+template:
+  params:
+    bootswatch: flatly
+
+home:
+  title: "iSEEWorkshop2020"
+  type: inverse
+
+
+navbar:
+  right:
+   - icon: fa-github
+     href: https://github.com/iSEE/iSEEWorkshop2020
