--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -72,14 +72,14 @@ jobs:
           path: check
 
       - name: Docker
-        - uses: docker/build-push-action@v1
-          with:
-            username: ${{ secrets.DOCKER_USERNAME }}
-            password: ${{ secrets.DOCKER_PASSWORD }}
-            repository: iseedevelopers/iseeworkshop2020
-            tag_with_ref: true
-            tag_with_sha: true
-            tags: latest
+        uses: docker/build-push-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: iseedevelopers/iseeworkshop2020
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest
 
      - name: Build pkgdown
         run: |
