--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -1,10 +1,10 @@
 on: [push]
 jobs:
-  job1:
+  build_check_deploy:
     runs-on: ubuntu-latest
     container: bioconductor/bioconductor_docker:devel
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
 
       - name: Query dependencies
         run: |
@@ -43,6 +43,7 @@ jobs:
         shell: Rscript {0}
         
       - uses: docker/build-push-action@v1
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
@@ -52,16 +53,18 @@ jobs:
           tags: latest
 
       - name: Build pkgdown
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
            PATH=$PATH:$HOME/bin/ Rscript -e 'BiocManager::install("pkgdown"); pkgdown::build_site(".")'
 
       # deploy needs rsync? Seems so.
       - name: Install deploy dependencies
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
-          apt-get update
-          apt-get -y install rsync
+          apt-get update && apt-get -y install rsync
 
       - name: Deploy 🚀
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
