--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -3,6 +3,8 @@ jobs:
   build_check_deploy:
     runs-on: ubuntu-latest
     container: bioconductor/bioconductor_docker:devel
+    env:
+      R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
     steps:
       - uses: actions/checkout@v2
 
