--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,6 @@ License: file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
-URL: https://github.com/iSEE/iSEEWorkshop2020, https://iSEE.github.io/iSEEWorkshop2020
+URL: https://iSEE.github.io/iSEEWorkshop2020
 BugReports: https://github.com/iSEE/iSEEWorkshop2020/issues
 DockerImage: iseedevelopers/iseeworkshop2020:latest
