--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -47,15 +47,15 @@ jobs:
       #  run: rcmdcheck::rcmdcheck(args = c("--no-manual"), error_on = "warning", check_dir = "check")
       #  shell: Rscript {0}
         
-      - uses: docker/build-push-action@v1
-        #if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: iseedevelopers/iseeworkshop2020
-          tag_with_ref: true
-          tag_with_sha: true
-          tags: latest
+      #- uses: docker/build-push-action@v1
+      #  if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+      #  with:
+      #    username: ${{ secrets.DOCKER_USERNAME }}
+      #    password: ${{ secrets.DOCKER_PASSWORD }}
+      #    repository: iseedevelopers/iseeworkshop2020
+      #    tag_with_ref: true
+      #    tag_with_sha: true
+      #    tags: latest
 
       - name: Build pkgdown
         #if: github.event_name == 'push' && github.ref == 'refs/heads/master'
