--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -41,35 +41,35 @@ jobs:
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
 
-      #- name: Check
-      #  env:
-      #    _R_CHECK_CRAN_INCOMING_REMOTE_: false
-      #  run: rcmdcheck::rcmdcheck(args = c("--no-manual"), error_on = "warning", check_dir = "check")
-      #  shell: Rscript {0}
+      - name: Check
+        env:
+          _R_CHECK_CRAN_INCOMING_REMOTE_: false
+        run: rcmdcheck::rcmdcheck(args = c("--no-manual"), error_on = "warning", check_dir = "check")
+        shell: Rscript {0}
         
-      #- uses: docker/build-push-action@v1
-      #  if: github.event_name == 'push' && github.ref == 'refs/heads/master'
-      #  with:
-      #    username: ${{ secrets.DOCKER_USERNAME }}
-      #    password: ${{ secrets.DOCKER_PASSWORD }}
-      #    repository: iseedevelopers/iseeworkshop2020
-      #    tag_with_ref: true
-      #    tag_with_sha: true
-      #    tags: latest
+      - uses: docker/build-push-action@v1
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          repository: iseedevelopers/iseeworkshop2020
+          tag_with_ref: true
+          tag_with_sha: true
+          tags: latest
 
       - name: Build pkgdown
-        #if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
            PATH=$PATH:$HOME/bin/ Rscript -e 'BiocManager::install("pkgdown"); pkgdown::build_site(".")'
 
       # deploy needs rsync? Seems so.
       - name: Install deploy dependencies
-        #if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         run: |
           apt-get update && apt-get -y install rsync
 
       - name: Deploy 🚀
-        #if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
