--- a/.github/workflows/basic_checks.yaml
+++ b/.github/workflows/basic_checks.yaml
@@ -42,9 +42,10 @@ jobs:
         shell: Rscript {0}
 
       - name: Publish to Registry
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
-          name: docker.pkg.github.com/isee/iseeworkshop2020/iseeworkshop2020:latest
+          name: docker.pkg.github.com/isee/iseeworkshop2020/master:latest
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
           registry: docker.pkg.github.com
