apply fix from https://community-bioc.slack.com/archives/CJDMYKG2U/p1594904087305400?thread_ts=1594779065.302300&cid=CJDMYKG2U

--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -37,6 +37,7 @@ jobs:
 
       - name: Install dependencies
         run: |
+          options(repos = c(CRAN = "https://cran.r-project.org"))
           remotes::install_deps(dependencies = TRUE, repos = BiocManager::repositories(), Ncpu = 2L)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
