--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -11,19 +11,21 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
-      - name: Query dependencies
+      - name: Query dependencies and update old packages
         run: |
           install.packages('remotes')
+          options(repos = c(CRAN = 'https://cran.r-project.org'))
+          BiocManager::install(ask=FALSE)
           saveRDS(remotes::dev_package_deps(dependencies = TRUE), ".github/depends.Rds", version = 2)
         shell: Rscript {0}
 
-      #- name: Cache R packages
-      #  if: runner.os != 'Windows'
-      #  uses: actions/cache@v1
-      #  with:
-      #    path: /usr/local/lib/R/site-library
-      #    key: ${{ runner.os }}-r-1-${{ hashFiles('.github/depends.Rds') }}
-      #    restore-keys: ${{ runner.os }}-r-1-
+      - name: Cache R packages
+        if: runner.os != 'Windows'
+        uses: actions/cache@v1
+        with:
+          path: /usr/local/lib/R/site-library
+          key: ${{ runner.os }}-r-1-${{ hashFiles('.github/depends.Rds') }}
+          restore-keys: ${{ runner.os }}-r-1-
 
       # This lets us augment with additional dependencies
       - name: Install system dependencies
@@ -38,6 +40,7 @@ jobs:
       - name: Install dependencies
         run: |
           options(repos = c(CRAN = "https://cran.r-project.org"))
+          BiocManager::repositories()
           remotes::install_deps(dependencies = TRUE, repos = BiocManager::repositories(), Ncpu = 2L)
           remotes::install_cran("rcmdcheck")
         shell: Rscript {0}
