--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -27,7 +27,7 @@ jobs:
           key: ${{ runner.os }}-r-1-${{ hashFiles('.github/depends.Rds') }}
           restore-keys: ${{ runner.os }}-r-1-
 
-      This lets us augment with additional dependencies
+      # This lets us augment with additional dependencies
       - name: Install system dependencies
         if: runner.os == 'Linux'
         env:
