--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -5,7 +5,7 @@ name: build_check_deploy
 jobs:
   build_check_deploy:
     runs-on: ubuntu-latest
-    container: bioconductor/bioconductor_docker:devel
+    container: bioconductor/bioconductor_docker:bioc2020
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
     steps:
