--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -8,6 +8,8 @@ jobs:
     container: bioconductor/bioconductor_docker:bioc2020
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v1
 
