--- a/.github/workflows/build_check_deploy.yaml
+++ b/.github/workflows/build_check_deploy.yaml
@@ -5,9 +5,11 @@ name: build_check_deploy
 jobs:
   build_check_deploy:
     runs-on: ubuntu-latest
-    container: bioconductor/bioconductor_docker:bioc2020
+    container: bioconductor/bioconductor_docker:RELEASE_3_17
     env:
       R_REMOTES_NO_ERRORS_FROM_WARNINGS: true
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v1
 
